deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: cont1
          image: manikantapaila/python:php.app
          ports:
            - containerPort: 80


          resources:
              requests:
                  cpu: "100m"
                  memory: "128Mi"
              limits:
                  cpu: "200m"
                  memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5


          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 5
