db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
